--- a/Daily_Planner/DailyPlannerApi/composer.json
+++ b/Daily_Planner/DailyPlannerApi/composer.json
@@ -12,6 +12,9 @@
         "php": ">=7.4",
         "phpmailer/phpmailer": "^6.9"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true
