--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,16 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "DailyPlannerApi\\": "src/",      
-            "DailyPlannerApi\\Config\\": "config/" 
+            "DailyPlannerApi\\": "src/",
+            "DailyPlannerApi\\Config\\": "config/"
         }
     },
     "require": {
         "php": ">=7.4",
         "phpmailer/phpmailer": "^6.9"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     },
     "config": {
         "allow-plugins": {
